<resources>
    <string name="app_name">Stisel</string>
    <string name="am_abut_text">Shtisel (Hebrew: שטיסל‎) is an Israeli television drama series about a fictional Jewish family living in Geula, Jerusalem.[1] Created and written by Ori Elon and Yehonatan Indursky,[1] the series premiered on 29 June 2013 on yes Oh, and is distributed by the online streaming service Netflix.[2] The show runs at 12 episodes per season. In May 2019, writer Yehonatan Indursky announced that the show would be renewed for a third season.[3]</string>
    <string name="am_abut_Bolttext">Overveuo:</string>
    <string name="am_insidtext_1">Avengers: Shtisel</string>
    <string name="am_dateOfCreat">Released: 29/06/2013</string>
    <string name="am_buttontext">Wotch movie</string>
</resources>
