<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/big"
            android:scaleType="fitXY"
            ></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="6dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:src="@drawable/sid"
                    android:scaleType="fitXY"
                ></ImageView>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                   >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am_insidtext_1"
                        android:textColor="#ff1aff"
                        android:textStyle="bold"
                        android:textSize="@dimen/am_textsiz_titel"
                        android:layout_margin="6dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am_dateOfCreat"
                        android:textSize="@dimen/am_textsiz_Date"
                        android:layout_margin="6dp">
                    </TextView>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:onClick="moovToPage"
                        android:text="@string/am_buttontext"
                        android:textSize="@dimen/am_bottonSiz"></Button>
                    </LinearLayout>


                </LinearLayout>
        </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:text="@string/am_abut_Bolttext"
                    android:textSize="@dimen/am_text_siz_boltInformasen"
                    android:textStyle="bold"
                    ></TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/am_abut_text"
                    android:textSize="16sp"
                    ></TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>